calender align fix project-setup

--- a/src/components/Projects/CreateProject/index.scss
+++ b/src/components/Projects/CreateProject/index.scss
@@ -414,20 +414,21 @@ sup {
     border-top-right-radius: 0;
     border-bottom-right-radius: 0;
     border: 0 !important;
-    height: 32px;
+    height: 30px;
   }
   .p-button,
   .p-button:hover {
     color: #adadad !important;
     background: #fff !important;
     border-radius: 6px;
-    height: 32px;
+    height: 30px;
     border: 0;
   }
   .p-calendar {
     border-radius: 4px;
     border: 1px solid #adadad;
     min-width: 208px;
+    height: 32px;
   }
 
   .form-select {
